...
                                    <constraint firstItem="UsR-We-YgS" firstAttribute="top" secondItem="QmA-0M-6qm" secondAttribute="top" constant="44" id="ABY-Ob-oYi"/>
                                    <constraint firstItem="UsR-We-YgS" firstAttribute="centerX" secondItem="QmA-0M-6qm" secondAttribute="centerX" id="nE0-mr-7fz"/>
                                </constraints>
                            </view>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="$1304" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eYr-XC-9nA">
                                <rect key="frame" x="273" y="75" width="86" height="50"/>
                                <accessibility key="accessibilityConfiguration" identifier="Savings summary"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="50" id="MOR-v4-FWg"/>
                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="50" id="gAY-QU-8m0"/>
                                </constraints>
                                <fontDescription key="fontDescription" name="Avenir-Heavy" family="Avenir" pointSize="29"/>
                                <color key="textColor" red="0.23529411759999999" green="0.82745098039999998" blue="0.76470588240000004" alpha="1" colorSpace="calibratedRGB"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Savings:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qdD-k5-rpw">
                                <rect key="frame" x="16" y="75" width="95.666666666666671" height="50"/>
                                <constraints>
                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="50" id="Ej4-yY-H1w"/>
                                    <constraint firstAttribute="height" constant="50" id="ybl-Od-FQb"/>
                                </constraints>
                                <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="26"/>
...
                                <rect key="frame" x="16" y="142" width="343" height="40"/>
                                <color key="backgroundColor" red="0.45064783096313477" green="0.83932691812515259" blue="0.80395382642745972" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="40" id="RLF-hZ-hTW"/>
                                </constraints>
                                <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="26"/>
                                <state key="normal" title="Manage">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
                                        <real key="value" value="20"/>
                                    </userDefinedRuntimeAttribute>
...
                                    <action selector="backBtnPressed:" destination="pul-zJ-dUh" eventType="touchUpInside" id="sHA-Tv-h6Y"/>
                                    <action selector="backBtnWasPressed:" destination="W2d-pa-GmO" eventType="touchUpInside" id="yBe-Bz-V23"/>
                                </connections>
                            </button>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="$-58" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kbA-TS-mhG">
                                <rect key="frame" x="325.33333333333331" y="165" width="33.666666666666686" height="22"/>
                                <accessibility key="accessibilityConfiguration" identifier="Account balance"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="22" id="gx1-7n-6TJ"/>
                                </constraints>
                                <fontDescription key="fontDescription" name="Avenir-Heavy" family="Avenir" pointSize="16"/>
                                <color key="textColor" red="0.94509803920000002" green="0.36470588240000001" blue="0.63137254899999995" alpha="1" colorSpace="calibratedRGB"/>
                                <nil key="highlightedColor"/>
...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YGU-8Q-b5Q" customClass="RoundedGradientButton" customModule="SpendBook" customModuleProvider="target">
                                        <rect key="frame" x="33.666666666666657" y="35.666666666666671" width="80" height="39.333333333333329"/>
                                        <color key="backgroundColor" red="0.450647831" green="0.83932691810000004" blue="0.80395382640000002" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                        <constraints>
                                            <constraint firstAttribute="width" constant="80" id="WVb-H7-VCR"/>
                                        </constraints>
                                        <state key="normal" title="+Add acct.">
                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        </state>
                                        <userDefinedRuntimeAttributes>
                                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
                                                <real key="value" value="20"/>
                                            </userDefinedRuntimeAttribute>
...
